finsished up feature section

--- a/index.html
+++ b/index.html
@@ -26,34 +26,76 @@ real
 </div>
 
 <section class="features">
-features
+<!--    <div class="sec-header">-->
+<!--        <h2> Our Services</h2>-->
+<!--    </div>-->
+    <div class="feature">
+        <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+        </svg>
+        <h4 class="heading">Feature 1</h4>
+        <p>Lorem ipsum lorem ispsun World best luxury</p>
+    </div>
+    <div class="feature">
+        <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-trophy"></use>
+        </svg>
+        <h4 class="heading"> All homes in L0cation</h4>
+        <p>Lorem ipsum lorem ispsun World best luxury</p>
+    </div>
+    <div class="feature">
+        <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+        </svg>
+        <h4 class="heading">Feature 1</h4>
+        <p>Lorem ipsum lorem ispsun World best luxury</p>
+    </div>
+    <div class="feature">
+        <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+        </svg>
+        <h4 class="heading">Feature 1</h4>
+        <p>Lorem ipsum lorem ispsun World best luxury</p>
+    </div>
+    <div class="feature">
+        <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+        </svg>
+        <h4 class="heading">Feature 1</h4>
+        <p>Lorem ipsum lorem ispsun World best luxury</p>
+    </div>
+    <div class="feature">
+        <svg class="feature__icon">
+            <use xlink:href="img/sprite.svg#icon-global"></use>
+        </svg>
+        <h4 class="heading">Feature 1</h4>
+        <p>Lorem ipsum lorem ispsun World best luxury</p>
+    </div>
+
+
 </section>
 
-
-
-<section class="story">
     <div class="story__pictures">
 
     </div>
 
-    <div class="story_content">
+    <div class="story__content">
 
     </div>
 
-</section>
 
 
 <section class="homes">
-
+my home
 </section>
 
 <section class="gallery">
-
+my gallery
 </section>
 
 
 <footer class="footer">
-
+my footer
 </footer>
 
 </body>
