--- a/index.html
+++ b/index.html
@@ -33,42 +33,42 @@ real
         <svg class="feature__icon">
             <use xlink:href="img/sprite.svg#icon-global"></use>
         </svg>
-        <h4 class="heading">Feature 1</h4>
+        <h4 class="heading-1">Feature 1</h4>
         <p>Lorem ipsum lorem ispsun World best luxury</p>
     </div>
     <div class="feature">
         <svg class="feature__icon">
             <use xlink:href="img/sprite.svg#icon-trophy"></use>
         </svg>
-        <h4 class="heading"> All homes in L0cation</h4>
+        <h4 class="heading-1"> All homes in L0cation</h4>
         <p>Lorem ipsum lorem ispsun World best luxury</p>
     </div>
     <div class="feature">
         <svg class="feature__icon">
             <use xlink:href="img/sprite.svg#icon-map-pin"></use>
         </svg>
-        <h4 class="heading">Feature 1</h4>
+        <h4 class="heading-1">Feature 1</h4>
         <p>Lorem ipsum lorem ispsun World best luxury</p>
     </div>
     <div class="feature">
         <svg class="feature__icon">
             <use xlink:href="img/sprite.svg#icon-global"></use>
         </svg>
-        <h4 class="heading">Feature 1</h4>
+        <h4 class="heading-1">Feature 1</h4>
         <p>Lorem ipsum lorem ispsun World best luxury</p>
     </div>
     <div class="feature">
         <svg class="feature__icon">
             <use xlink:href="img/sprite.svg#icon-global"></use>
         </svg>
-        <h4 class="heading">Feature 1</h4>
+        <h4 class="heading-1">Feature 1</h4>
         <p>Lorem ipsum lorem ispsun World best luxury</p>
     </div>
     <div class="feature">
         <svg class="feature__icon">
             <use xlink:href="img/sprite.svg#icon-global"></use>
         </svg>
-        <h4 class="heading">Feature 1</h4>
+        <h4 class="heading-1">Feature 1</h4>
         <p>Lorem ipsum lorem ispsun World best luxury</p>
     </div>
 
@@ -76,17 +76,216 @@ real
 </section>
 
     <div class="story__pictures">
-
+        <img src="img/story-1.jpeg" class="story__img--1" alt="couples with image">
+        <img src="img/story-2.jpeg" class="story__img--2" alt="couples with image">
     </div>
 
     <div class="story__content">
-
+<h3 class="heading-2">Happy Customers</h3>
+<h2 class="heading-3"> The best decision of our lives</h2>
+        <p class="story__text"> Lorem ipsum.. just because i know i can type any shitty thing here</p>
+        <button class="btn">Find your home</button>
     </div>
 
 
 
 <section class="homes">
-my home
+    <div class="home">
+         <img src="img/house-1.jpeg" class="home__img" alt="House 1">
+        <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Beautiful family</h5>
+        <div class="home__location">
+            <svg class="home__like">
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+<!--            <p>USA </p>-->
+        </div>
+        <div class="home__rooms">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__area">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__price">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p> $120,000</p>
+        </div>
+        <button class="home__cta">contact realtor</button>
+    </div>
+    <div class="home">
+         <img src="img/house-1.jpeg" class="home__img" alt="House 1">
+        <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Beautiful family</h5>
+        <div class="home__location">
+            <svg class="home__like">
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+<!--            <p>USA </p>-->
+        </div>
+        <div class="home__rooms">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__area">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__price">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p> $120,000</p>
+        </div>
+        <button class="home__cta">contact realtor</button>
+    </div>
+    <div class="home">
+         <img src="img/house-1.jpeg" class="home__img" alt="House 1">
+        <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Beautiful family</h5>
+        <div class="home__location">
+            <svg class="home__like">
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+<!--            <p>USA </p>-->
+        </div>
+        <div class="home__rooms">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__area">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__price">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p> $120,000</p>
+        </div>
+        <button class="home__cta">contact realtor</button>
+    </div>
+    <div class="home">
+         <img src="img/house-1.jpeg" class="home__img" alt="House 1">
+        <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Beautiful family</h5>
+        <div class="home__location">
+            <svg class="home__like">
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+<!--            <p>USA </p>-->
+        </div>
+        <div class="home__rooms">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__area">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__price">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p> $120,000</p>
+        </div>
+        <button class="home__cta">contact realtor</button>
+    </div>
+    <div class="home">
+         <img src="img/house-1.jpeg" class="home__img" alt="House 1">
+        <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Beautiful family</h5>
+        <div class="home__location">
+            <svg class="home__like">
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+<!--            <p>USA </p>-->
+        </div>
+        <div class="home__rooms">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__area">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__price">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p> $120,000</p>
+        </div>
+        <button class="home__cta">contact realtor</button>
+    </div>
+    <div class="home">
+         <img src="img/house-1.jpeg" class="home__img" alt="House 1">
+        <svg class="home__like">
+            <use xlink:href="img/sprite.svg#icon-heart-full"></use>
+        </svg>
+        <h5 class="home__name">Beautiful family</h5>
+        <div class="home__location">
+            <svg class="home__like">
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+<!--            <p>USA </p>-->
+        </div>
+        <div class="home__rooms">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__area">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p>USA </p>
+        </div>
+        <div class="home__price">
+            <svg>
+                <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+            </svg>
+            <p> $120,000</p>
+        </div>
+        <button class="home__cta">contact realtor</button>
+    </div>
+
+
+
+
 </section>
 
 <section class="gallery">
